# mean_in_window

./: CMakeLists.txt  readme.md
examples/: example.cpp
mean_in_window/: CMakeLists.txt
mean_in_window/benchmarks/: CMakeLists.txt  mean_in_window_benchmark.cpp
mean_in_window/include/: mean_in_window.hpp
mean_in_window/src/: mean_in_window.cpp
mean_in_window/tests/: CMakeLists.txt  mean_in_window_test.cpp
